@@ -238,6 +238,9 @@
 					notice and information. Use "log_dest none" if you wish to
 					disable logging. Defaults to stderr. This option
 					may be specified multiple times.</para>
+					<para>Note that if the broker is running as a Windows
+						service it will default to "log_dest none" and neither
+						stdout nor stderr logging is available.</para>
 					<para>Reloaded on reload signal.</para>
 				</listitem>
 			</varlistentry>
