@@ -351,6 +351,8 @@
 # topic logs to the broker topic '$SYS/broker/log/<severity>', 
 # where severity is one of D, E, W, N, I which are debug, error, 
 # warning, notice and information.
+# Note that if the broker is running as a Windows service it will default to
+# "log_dest none" and neither stdout nor stderr logging is available.
 # Use "log_dest none" if you wish to disable logging.
 #log_dest stderr
 
